# tfbert

./: .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml
data/: cola_out_of_domain_test.tsv
tfbert/: cola_data.py  dataset.py  loss.py  metrics.py  models.py
