[tool.poetry]
name = "tfbert"
version = "0.1.0"
description = ""
authors = ["Soumendra Dhanee <soumendra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.0"
attrdict = "^2.0.1"
loguru = "^0.5.1"
click = "^7.1.2"
sklearn = "^0.0"
transformers = "^3.0.2"
tqdm = "^4.48.2"
numpy = "1.18.5"
pandas = "^1.1.0"
matplotlib = "^3.3.0"
tensorflow-addons = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
mypy = "^0.782"
flake8 = "^3.8.3"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
